--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,8 +15,7 @@ jobs:
      - name: Set up HashiCorp APT Repository
        run: |
          curl -fsSL https://apt.releases.hashicorp.com/gpg"> https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-         sudo apt-add-repository "deb [arch=amd64]
-         https://apt.releases.hashicorp.com$(lsb_release -cs) main"
+         sudo apt-add-repository "deb [arch=amd64]https://apt.releases.hashicorp.com$(lsb_release -cs) main"
          sudo apt-get update
      - name: Install Vault
        run: sudo apt-get install vault
