--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,10 +14,7 @@ jobs:
        uses: actions/checkout@v3
      - name: Set up HashiCorp APT Repository
        run: |
-         curl -fsSL
-         https://apt.releases.hashicorp.com/gpg">https://apt.releases.hashicorp.com/gpg | 
-         sudo apt-key add - && sudo apt-add-repository "deb [arch=amd64]
-         https://apt.releases.hashicorp.com $(lsb_release -cs) main" && sudo apt-get update
+         curl -fsSL https://apt.releases.hashicorp.com/gpg">https://apt.releases.hashicorp.com/gpg | sudo apt-key add - && sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main" && sudo apt-get update
          sudo apt-get update
      - name: Install Vault
        run: sudo apt-get install vault
