--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,8 +20,8 @@ jobs:
        run: sudo apt-get install vault
      - name: Fetch credentials from Vault
        env:
-         VAULT_ADDR: ${{ SECRETS.VAULT_ADDR }}
-         VAULT_TOKEN: ${{ SECRETS.VAULT_TOKEN }}
+         VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
+         VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
        run: |
          chmod +x ./credentials.sh
          ./credentials.sh
@@ -44,7 +44,7 @@ jobs:
        with:
          python-version: 3.9
      - name: Install dependencies
-       run: pip install -r ./git-repo/requirements.txt
+       run: pip install -r ./requirements.txt
      - name: Run scraper
        env:
          EMAIL: ${{ steps.save-credentials.outputs.username }}
