--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,14 +17,9 @@ jobs:
          LOGIN_EMAIL: ${{ secrets.LOGIN_EMAIL }}
          LOGIN_PASSWORD: ${{ secrets.LOGIN_PASSWORD }}
        run: |
-         echo LOGIN_EMAIL
+         echo "LOGIN_EMAIL: $LOGIN_EMAIL"
+         echo "LOGIN_PASSWORD: $LOGIN_PASSWORD"
          ls -l
-       shell: bash
-     - name: Save credentials
-       id: save-credentials
-       run: |
-         echo "::set-output name=username::$(cat ./credentials/username)"
-         echo "::set-output name=password::$(cat ./credentials/password)"
        shell: bash
  scrape-and-store:
    runs-on: ubuntu-latest
@@ -38,6 +33,13 @@ jobs:
          python-version: 3.9
      - name: Install dependencies
        run: pip install -r ./requirements.txt
+     - name: Echo credentials
+       env:
+         EMAIL: ${{ secrets.LOGIN_EMAIL }}
+         PASSWORD: ${{ secrets.LOGIN_PASSWORD }}
+       run: |
+         echo "EMAIL: $EMAIL"
+         echo "PASSWORD: $PASSWORD"
      - name: Run scraper
        env:
          EMAIL: ${{ secrets.LOGIN_EMAIL }}
